...
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search_box_field"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_search_dark"
                        android:hint="@string/albums_search"
                        android:background="@color/white"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/album_recycler_view"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/search_box"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
...
