<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item android:id="@+id/nav_item_one"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/menu_home"/>

        <item android:id="@+id/nav_item_two"
            android:icon="@drawable/ic_album_dark"
            android:title="@string/menu_albums"/>

        <item
            android:id="@+id/nav_item_three"
            android:icon="@drawable/ic_person_dark"
            android:title="@string/menu_artists" />

        <item android:id="@+id/nav_item_four"
            android:icon="@drawable/ic_person_dark"
            android:title="@string/collectors"/>
    </group>
</menu>