...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/artist_detail_image"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/ic_album_dark"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
...
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    />

                <TextView
                    android:id="@+id/artist_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.artist != null ? viewModel.artist.name : ``}"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>

...
